--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.3-Alpha2
	- Added Democratic Play ability, UI incomplete and 'clunky'
	- Added some extra error checking to the install process
	- Fixed issue with delete confirmation on playlist always being 
		yes, even if you click no.
	- Added more error checking to install, won't let you continue 
		without a valid MySQL connection, rather then relying
		on the db_select() to fail
	- Fixed a session race condition if you turn use_auth off and on
		and a user log in while use_auth if off
	- Fixed a potential foreach error if no songs passed to stream
		now logs error and gently returns the user
	- Added ability for Admins to define the required permission level
		for individual preferences
	- Added WavPack support
	- Forced a sane Post Size had some people with 32 byte post sizes
		which will not work with Ampache. 
	- Fixed a logic error with the MPD controller.
	- Fixed a problem were invalid bitrates below the set downsample
		bitrate could cause lame to crash as they weren't 
		validated. 
	- Added XSPF Flash player, rough around the edges but it works
		(Thx pb1dft/GrinningArmor)
	- Fixed bug with Album --> Artist sorting, wasn't allowing you to
		sort Z-A
	- Fixed bug with most popular where links weren't being generated
		correctly


--------------------------------------------------------------------------
  v.3.3.3-Alpha1 10/28/2006
        - Added IP History to admin->users (Thx pb1dft)
	- Added HTTP auth method, auto-creates a 'user' if the auth user
		doesn't exist in the database. 
	- Fixed Mail statistics. It broke down after earlier updates.
	- Reworked RSS features (Thx pb1dft)
		Newest and latest songs albums and artist are available 
		through RSS.